#3 Accounts API domain model: - adding common module - adding DAO

--- a/api/settings.gradle
+++ b/api/settings.gradle
@@ -1,2 +1,4 @@
 rootProject.name = 'api'
-include ":rates-api", ":transfers-api", "accounts-api"
+include ":common"
+include ":rates-api", ":transfers-api", ":accounts-api"
+
