--- a/api/accounts-api/build.gradle
+++ b/api/accounts-api/build.gradle
@@ -1,9 +1,16 @@
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
+apply plugin: 'org.springframework.boot'
+
+
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-actuator')
-//	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-web')
+    compile project(":common")
+
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+
+	runtime('org.hsqldb:hsqldb')
 }
