--- a/api/transfers-api/build.gradle
+++ b/api/transfers-api/build.gradle
@@ -1,6 +1,8 @@
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
+apply plugin: 'org.springframework.boot'
+
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 //	compile('org.springframework.boot:spring-boot-starter-data-jpa')
