--- a/api/accounts-api/build.gradle
+++ b/api/accounts-api/build.gradle
@@ -7,10 +7,12 @@ apply plugin: 'org.springframework.boot'
 dependencies {
     compile project(":common")
 
+    compile("org.projectlombok:lombok:1.16.16")
+
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile('org.springframework.boot:spring-boot-starter-web')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
 
-	runtime('org.hsqldb:hsqldb')
+    compile("com.h2database:h2")
 }
