--- a/api/build.gradle
+++ b/api/build.gradle
@@ -16,8 +16,16 @@ allprojects {
 
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'groovy'
 
     repositories {
 	    mavenCentral()
     }
+
+	dependencies {
+		testCompile('org.spockframework:spock-core:1.0-groovy-2.4')
+		testCompile('org.awaitility:awaitility-groovy:2.0.0')
+		testCompile('org.springframework.boot:spring-boot-starter-test')
+		testCompile('org.spockframework:spock-spring:1.0-groovy-2.4')
+	}
 }
