#9 User can deposit money to account - gradle build refactoring close #9 and #10

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -15,10 +15,14 @@ allprojects {
 }
 
 subprojects {
-    apply plugin: 'java'
-    apply plugin: 'groovy'
 
-    repositories {
+	apply plugin: 'java'
+	apply plugin: 'groovy'
+
+	sourceCompatibility = 1.8
+	targetCompatibility = 1.8
+
+	repositories {
 	    mavenCentral()
     }
 
