--- a/api/build.gradle
+++ b/api/build.gradle
@@ -30,9 +30,10 @@ subprojects {
 	dependencies {
         compile("org.projectlombok:lombok:1.16.16")
 
-        compile('com.github.briandilley.jsonrpc4j:jsonrpc4j:1.4.6')
+        compile('com.github.briandilley.jsonrpc4j:jsonrpc4j:1.5.0')
+        compile('com.google.code.findbugs:findbugs:3.0.1')
 
-		testCompile('org.spockframework:spock-core:1.0-groovy-2.4')
+        testCompile('org.spockframework:spock-core:1.0-groovy-2.4')
 		testCompile('org.awaitility:awaitility-groovy:2.0.0')
 		testCompile('org.springframework.boot:spring-boot-starter-test')
 		testCompile('org.spockframework:spock-spring:1.0-groovy-2.4')
