--- a/api/rates-api/build.gradle
+++ b/api/rates-api/build.gradle
@@ -2,9 +2,11 @@ version = '0.0.1-SNAPSHOT'
 
 apply plugin: 'org.springframework.boot'
 
-
 dependencies {
+	compile project(":common")
+
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+
 }
